src/scss/mobile/_breakpoints.scss
@use "../util/functions" as util;
@use "../global/variables" as var;
@use "../global/typography" as fonts;

@media screen and (max-width: 760px) {
    .portfolio {
        &__contents {
            grid-template: auto / 1fr;
        }
    }

    .exit-icon::after {
        transform: translateX(-85%)   translateY(-100%);
    }

    .buttons-category-portfolio {
        display: block;
        text-align: center;

        &::before, &::after {
            display: none;
        }
    }

    .buttons-category__text {
        text-align: center;
    }
}

@media screen and (max-width: 660px) {
    .contents {
        padding: util.rem(32) util.rem(32);

        &__header {
            font-size: fonts.$header-m;
        }

        &__paragraph {
            font-size: fonts.$paragraph-m;
            max-width: util.rem(320);
        }
    }

    .links-container {
        width: util.rem(320);
    }

    .commissions__top__header {
        font-size: util.rem(48);
    }
    .commissions__contents {
        max-width: util.rem(320);
        padding: 0 0 util.rem(32);

        &__paragraph {
            font-size: util.rem(18);
        }

        &__list {
            font-size: util.rem(18);
        }
    }
}

